<resources>
    <string name="app_name">Gry miejskie</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string-array name="nav_drawer_items">
        <item>Start</item>
        <item>Twoje drużyny</item>
        <item>Twoje gry</item>
        <item>Scenariusze</item>
        <item>Ranking</item>
        <item>Wyloguj</item>
    </string-array>

    <string name="title_activity_register">Rejestracja</string>
    <string name="title_activity_login">Zaloguj</string>
    <string name="title_activity_navigation_drawer">Gry miejskie</string>

    <!-- LOGIN AND REGISTRATION ACTIVITIES -->
    <string name="action_login_in">Zaloguj</string>
    <string name="action_register">Zarejestruj</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="error_invalid_email">Nieprawidłowy adres email</string>
    <string name="error_field_required">Pole należy wypełnić</string>
    <string name="diffrent_passwords">Podane hasła są różne</string>
    <string name="error_incorrect_password">Błędne hasło</string>
    <string name="password_too_short">Hasło musi mieć co najmniej 4 znaki</string>


    <string name="shared_preferences_credentials">Credentials</string>

    <string name="navigation_drawer_open">Otwarte menu</string>
    <string name="navigation_drawer_close">Zamknięte menu</string>

    <!-- START FRAGMENT -->
    <string name="current_game">Kontynuuj grę</string>
    <string name="start_game">Nowa gra</string>
    <string name="your_teams">Twoje drużyny</string>
    <string name="your_games">Twoje gry</string>
    <string name="sceanrios">Scenariusze</string>
    <string name="rank">Ranking</string>


    <!-- STATISTICS -->
    <string name="your_achievement">Twoje osiągnięcia:</string>
    <string name="games_count">Liczba rozegranych gier</string>
    <string name="games_won">wygrane</string>
    <string name="games_lost">przegrane</string>
    <string name="points_count">Liczba zdobytych punktów</string>
    <string name="avarage">średnio</string>
    <string name="max">maksymalnie</string>
    <string name="distance">Pokonany dystans</string>

    <!-- TEAMS FRAGEMENT -->
    <string name="add_team">Dodaj drużynę</string>
    <string name="sign_to_team">Zapisz się do drużyny</string>
    <string name="ok">Ok</string>
    <string name="cancel">Przerwij</string>
    <string name="team_name">Nazwa drużyny</string>

    <!-- TIPS FRAGMENT -->
    <string name="no_tips">Nie ma wskazówek, to zadanie jest za proste :)</string>
    <string name="buy">Kup</string>

    <!-- GAMES FRAGMNET-->
    <string name="scenario_name">Scenariusz</string>
    <string name="time_in_game">Czas gry</string>
    <string name="colleted_points">Zdobyte punkty</string>
    <string name="team">Drużyna</string>

    <!-- TASK FRAGMENT -->
    <string name="answer">Odpowiedź</string>

    <!-- SCENARIO DETAILS FRAGMENT -->
    <string name="level">Poziom trudności</string>
    <string name="users_amount">Minimalna liczba graczy</string>
    <string name="approximate_time">Czas gry</string>
    <string name="approximate_distance">Szacowana odległość</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_task">MainTaskActivity</string>

    <!-- RANK FRAGMENT -->
    <string name="get_best_20">Aktualizuj ranking</string>
    <string name="get_next_10">Pobierz kolejne pozycje</string>

    <!--MAIN TASK ACTIVITY -->
    <string name="get_current_task">Odśwież</string>


    <!-- TOASTS -->
    <string name="toast_connection_error">Błąd połącznia. Spróbuj ponownie później</string>
    <string name="toast_login">Zalogowany</string>
    <string name="toast_account_registered">Utworzono konto</string>
    <string name="toast_email_exist_in_db">Podany email istnieje już w bazie</string>
    <string name="toast_synchronization">Trwa synchronizacja danych</string>

    <string name="startTrackingIntent">StartTracking</string>
    <string name="stopTrackingIntent">StopTrackingIntent</string>
</resources>
