<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:textAlignment="center"
    tools:context="com.wroclaw.citygames.citygamesapp.ui.StartFragment">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:measureWithLargestChild="false">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                >

                <Button
                    android:text="@string/start_game"
                    android:drawableTop="@drawable/ic_start_game"
                    android:textAppearance="@style/HeaderFont"
                    android:id="@+id/start_game_button"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:layout_height="fill_parent" />

                <Button
                    android:text="@string/current_game"
                    android:paddingTop="15dp"
                    android:drawableTop="@drawable/ic_current_game"
                    android:textAppearance="@style/HeaderFont"
                    android:id="@+id/current_game_button"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <Button
                    android:text="@string/your_teams"
                    android:paddingTop="15dp"
                    android:drawableTop="@drawable/ic_my_teams"
                    android:textAppearance="@style/HeaderFont"
                    android:id="@+id/yout_teams_button"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_height="fill_parent" />

                <Button
                    android:text="@string/your_games"
                    android:paddingTop="15dp"
                    android:drawableTop="@drawable/ic_my_games"
                    android:textAppearance="@style/HeaderFont"
                    android:id="@+id/your_games_button"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"

                    android:layout_column="1"
                    android:layout_height="fill_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <Button
                    android:text="@string/sceanrios"
                    android:paddingTop="15dp"
                    android:drawableTop="@drawable/ic_scenario"
                    android:textAppearance="@style/HeaderFont"
                    android:id="@+id/scenarios_button"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent" />

                <Button
                    android:text="@string/rank"
                    android:paddingTop="15dp"
                    android:drawableTop="@drawable/ic_ranking"
                    android:textAppearance="@style/HeaderFont"
                    android:id="@+id/rank_button"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
    </ScrollView>
</FrameLayout>
